fixed my-profile edit interest bug, and swipe overflow bug

--- a/assets/css/swipe.css
+++ b/assets/css/swipe.css
@@ -10,8 +10,13 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   margin: 0;
   padding: 0;
+}
+
+.pg-wrapper, .pg-vertical {
+  overflow: hidden;
 }
 
 #page-1 {
